--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,6 +10,7 @@ log4j.appender.console.layout.ConversionPattern=%d - darren_web - %p [%c] - <%m>
 #RollingFile
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.File=F:\\project\\logs\\darren_web.log
+log4j.appender.file.encoding=UTF-8
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d - darren_web - %p [%c] - <%m>%n
  
